--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday card</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Birthday card</title>
     <link rel="icon"  href="https://rukminim2.flixcart.com/image/416/416/k4ss2a80/card/2/h/y/1-card-2l-greeting-gaurangi-card-original-imafnmedt7jcdhmf.jpeg?q=70">
-    <script src="https://kit.fontawesome.com/c05ee60293.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c05ee60293.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="card">
-       <img src="https://raw.githubusercontent.com/DenverCoder1/Responsive-Birthday-Card/252536d4af99794684c9a133217fd82c85161161/birthday.svg" alt="Happy Birthday" class="birthday">
-       <div class="text">
-           <h1>Happy Birthday<i class="fa-solid fa-heart"></i>!</h1>
-           <p>Happy Birthday dear Sanika.<br><!--Sanjana.--> Be always by my side and Stay happy and blessed. <!--Feeling very lucky-->Feels great to have a friend like you.</p>
-           <p class="muted">- From Aniket Botre</p>
-           <div class="space"></div>
-       </div>
-    </div>
+	<div class="card">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Click me!!</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					
+					<div class="card__body">
+						<img src="sample.JPG" alt="Photo" class="photo">
+            <br>
+            <h1>Happy Birthday dear Sanika<i class="fa-solid fa-heart"></i>!</h1>
+            <br>
+            <p class="text">Stay charming and blessed. Feels great to have a friend like you.</p>
+            <br>
+            <p class="muted">- From Aniket Botre</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+    <script src="main.js"></script>
 </body>
 </html>
